--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Go Trip a Travel Category Category Responsive Web Template| Contact :: W3layouts</title>
+    <title>Go Trip a Travel Category Category Responsive Web Template| Contact :: vamsi vardhan</title>
 
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -49,7 +49,7 @@
 					</ul>
 				<ul class="navbar-nav ml-auto">
 						<li class="nav-item ml-4">
-							<a class="nav-link phone" href="tel:+(21)-234-9999"><span class="fa fa-phone"></span> +(21)-234-9999</a>
+							<a class="nav-link phone" href="tel:+(21)-234-9999"><span class="fa fa-phone"></guntur> +(91)-8977318831</a>
 						</li>
 						 <li class="nav-item" title="Search"><a href="#search" class="search-search nav-link"><span class="fa fa-search mr-2" aria-hidden="true"></span></a></li>
 				<!-- search -->
@@ -174,7 +174,7 @@ $(function () {
     <div class="about-inner contact">
         <div class="breadcrumbs-sub">
             <ul class="breadcrumbs-custom-path">
-                <li class="right-side propClone"><a href="index.html" class="editContent">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a> <p></li>
+                <li class="right-side propClone"><a href="index.html" class="editContent">Home <span class="fa fa-angle-right" aria-hidden="true"></guntur></a> <p></li>
                 <li class="active editContent">
                     Contact</li>
             </ul>
@@ -193,7 +193,7 @@ $(function () {
                 <input type="email" class="form-control" name="w3lSender" id="w3lSender" placeholder="Email" required="">
                 <input type="text" class="form-control" name="w3lSubject" id="w3lSubject" placeholder="Subject" required="">
             </div>
-            <textarea name="w3lMessage" class="form-control" id="w3lMessage" placeholder="Message" required=""></textarea>
+            <textarea name="vamsilMessage" class="form-control" id="w3lMessage" placeholder="Message" required=""></textarea>
 
             <div class="text-right">
                 <button type="submit" class="btn btn-contact">Send Message</button>
@@ -252,15 +252,15 @@ $(function () {
 					<li><p><span class="fa fa-map-marker"></span>California, #32841 block,
 						#221DRS 75 West Rock,
 						Maple Building, UK.</p></li>
-					<li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+					<li><a href="tel:+7-800-999-800"><guntur class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
 					<li><a href="mailto:estate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> Exterior-mail@support.com</a></li>
 				</ul>
 				<div class="main-social-footer-29">
-					<a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-					<a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-					<a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-					<a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
-					<a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+					<a href="#facebook" class="facebook"><guntur class="fa fa-facebook"></guntur></a>
+					<a href="#twitter" class="twitter"><guntur class="fa fa-twitter"></guntur></a>
+					<a href="#instagram" class="instagram"><guntur class="fa fa-instagram"></guntur></a>
+					<a href="#google-plus" class="google-plus"><guntur class="fa fa-google-plus"></guntur></a>
+					<a href="#linkedin" class="linkedin"><guntur class="fa fa-linkedin"></guntur></a>
 				</div>
 			</div>
 			<div class="footer-list-29 footer-2">
