--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 						<li class="nav-item @@contact__active">
 							<a class="nav-link" href="contact.html">Contact</a>
 						</li>
+						
+						<li class="nav-item @@contact__active">
+							<a class="nav-link" href="healthbot.html">healthbot</a>
+						</li>
 					</ul>
 				<ul class="navbar-nav ml-auto">
 						<li class="nav-item ml-4">
