--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					</ul>
 				<ul class="navbar-nav ml-auto">
 						<li class="nav-item ml-4">
-							<a class="nav-link phone" href="tel:+(21)-234-9999"><span class="fa fa-phone"></span> +(21)-234-9999</a>
+							<a class="nav-link phone" href="tel:+(91)-8977318832"><span class="fa fa-phone"></span> +(91)-8977318832</a>
 						</li>
 						 <li class="nav-item" title="Search"><a href="#search" class="search-search nav-link"><span class="fa fa-search mr-2" aria-hidden="true"></span></a></li>
 				<!-- search -->
