--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
 					</ul>
 				<ul class="navbar-nav ml-auto">
 						<li class="nav-item ml-4">
-							<a class="nav-link phone" href="tel:+(21)-234-9999"><span class="fa fa-phone"></span> +(21)-234-9999</a>
+							<a class="nav-link phone" href="tel:+(91)-8977318832"><span class="fa fa-phone"></span> +(91)-8977318832</a>
 						</li>
 						 <li class="nav-item" title="Search"><a href="#search" class="search-search nav-link"><span class="fa fa-search mr-2" aria-hidden="true"></span></a></li>
 				<!-- search -->
@@ -294,7 +294,7 @@ $(function () {
 					<li><p><span class="fa fa-map-marker"></span>California, #32841 block,
 						#221DRS 75 West Rock,
 						Maple Building, UK.</p></li>
-					<li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+					<li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(91)-8977318832</a></li>
 					<li><a href="mailto:estate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> Exterior-mail@support.com</a></li>
 				</ul>
 				<div class="main-social-footer-29">
