Google meta verse

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>bobs trip</title>
-
+<meta name="google-site-verification" content="UIDRAMOfVMDcd6Z8c3SrhJWIWtDLfUhh97Xqp_IMlc4" />
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
