--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li class="nav-item @@about__active">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
-						<li class="nav-item @@contact__active">
+						<li class="nav-item @@healthbot__active">
 							<a class="nav-link" href="healthbot.html">healthbot</a>
 						</li>
 						<li class="nav-item @@services__active">
