--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@
 						<li class="nav-item @@home__active">
 							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 						</li>
+						<li class="nav-item @@healthbot__active">
+							<a class="nav-link" href="healthbot.html">healthbot</a>
+						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
