--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
 						<li class="nav-item @@about__active">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
+						<li class="nav-item @@healthbot__active">
+							<a class="nav-link" href="healthbot.html">healthbot</a>
+						</li>
 						<li class="nav-item @@services__active">
 							<a class="nav-link" href="services.html">Explore</a>
 						</li>
